<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">IPM</string>
    <string name="full_name">Indiana Public Media</string>
    <string name="action_settings">Settings</string>
    <string name="place_holder">Place Holder</string>
    <string name="action_new">Settings</string>
    <string name="story_title">First News Story Card</string>
    <string name="second_story_title">Second Story Title</string>
    <string name="third_story_title">Third Story Title</string>
    <string name="story_body">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="read_more">Read More</string>
    <string name="story_author">The Amazing Toad</string>
    <string name="story_date">Jan 1, 2019</string>
    <string name="title_activity_story">Story</string>
    <string name="title_activity_radio">Radio</string>
    <string name="radio_prog_name">Program Name</string>
    <string name="radio_prog_host">Host Name</string>
    <string name="radio_prog_time">Time Slot</string>
    <string name="radio_prog_next">Next Program</string>
    <string name="action_home">Home</string>
    <string name="action_radio">WFIU</string>
    <string name="action_tv">WTIU</string>
    <string name="title_activity_television">Television</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="radioPlayState">pause</string>
    <string name="player_error">Something went wrong</string>
    <string name="facebook_app_id">2321402551437115</string>
    <string name="fb_login_protocol_scheme">fb2321402551437115</string>

</resources>
