<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.Radio"
    tools:showIn="@layout/activity_radio">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/appBackground"
        android:orientation="vertical">



    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical">

            <VideoView
                android:id="@+id/wfiuOne"
                android:clickable="true"
                android:onClick="wfiuOnePlayClick"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@mipmap/radioicon"
                android:contentDescription="@string/place_holder" />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight=".33"
                android:text="@string/radio_prog_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/radio_prog_host" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight=".33"
                android:text="@string/radio_prog_time" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="250dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/radioPlayButton"
                android:clickable="true"
                android:onClick="wfiuOnePlayClick"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="120dp"
                android:layout_marginBottom="10dp"
                android:tag="@string/radioPlayState"
                android:src="@mipmap/playicon"
                android:contentDescription="@string/place_holder"
                />



            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/radioNextButton"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="10dp"
                android:background="@mipmap/nexticon"
                android:contentDescription="@string/place_holder"
                />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="10dp"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@mipmap/adspaceicon" />

    </LinearLayout>

    </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>